--- a/my_page.html
+++ b/my_page.html
@@ -3,6 +3,6 @@ title: Anthony Panvini First Jekyll page
 layout: default
 category: "exercise"
 ---
-<h2>I have no clue what I am doing</h2>
+<h2>Content line</h2>
 
 <button class="btn btn-danger" href="javascript:void(null)">Button</button>
