--- a/my_page.html
+++ b/my_page.html
@@ -1,6 +1,6 @@
 ---
 title: Anthony Panvini First Jekyll page
-layout: default
+layout: nav_column 
 category: "exercise"
 ---
 <h2>Content line</h2>
