--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 title: Fake Title
 layout: default
 ---
-<h2>I Made A Page With Jekyll</h2>
+<h2> App Review</h2>
 
 This is the content of the page. All <em>HTML</em> can be included. Since the layout uses bootstrap we can also include <span class="text-danger">Bootstrap classes</span>.
