--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
-title: App Reviews 
+title: App Reviews
 layout: default
 ---
-<h2>I Made A Page With Jekyll</h2>
+<h3>News</h3>
+<h3>Reviews</h3> 
+
 
 This is the content of the page. All <em>HTML</em> can be included. Since the layout uses bootstrap we can also include <span class="text-danger">Bootstrap classes</span>.
