--- a/games.html
+++ b/games.html
@@ -1,51 +1,57 @@
 ---
-title: App Reviews
+title: Featured Games for iOS and Android devices
+
 layout: default
 ---
-  <h2>News</h2>
-  <div class="row">
+
+<h2>Games</h2>
+<div class="row">
 
 <div class= "col-md-4">
-
-  <p> <a href = "newsOne.html"> <img src="Images/3dPrinter.jpg" alt="3D printer news">  </a> </p>
+<div = "gamesOne">
+<p> <a href = "gamesOne.html"> <img src="Images/3dPrinter.jpg" alt="3D printer news">  </a> </p>
+</div>
 <h3> Dummy Headline</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
 <div class= "col-md-4">
-  <p> <a href = "newsTwo.html"> <img src="Images/tablet.png" alt="Tablet News">  </a> </p>
-  <h3> Dummy Headline </h3>
+<div = "gamesTwo">
+<p> <a href = "gamesTwo.html"> <img src="Images/tablet.png" alt="Tablet News">  </a> </p>
+</div>
+<h3> Dummy Headline </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class= "col-md-4">
-  <p> <a href = "newsThree.html"> <img src="Images/galaxy s6.jpg" alt="Phone News">  </a> </p>
-  <h3> Dummy Headline </h3>
+  <div = "gamesThree">
+<p> <a href = "gamesThree.html"> <img src="Images/galaxy s6.jpg" alt="Phone News">  </a> </p>
+</div>
+<h3> Dummy Headline </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 </div>
-<h2>Reviews</h2>
 
 <div class="row">
 <div class= "col-md-4">
-  <div id = "reviewOne">
+<div id = "gamesFour">
 
-  <p> <a href = "reviewOne.html"> <img src="Images/twitter.jpg" alt="Twitter review">  </a> </p>
+<p> <a href = "gamesFour.html"> <img src="Images/twitter.jpg" alt="Twitter review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class= "col-md-4">
-  <div id = "reviewTwo">
+<div id = "gamesFive">
 
-  <p> <a href = "reviewTwo.html"> <img src="Images/Snapchat.png" alt="Snapchat review">  </a> </p>
+<p> <a href = "gamesFive.html"> <img src="Images/Snapchat.png" alt="Snapchat review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class= "col-md-4">
-  <div id = "reviewThree">
-  <p> <a href = "reviewThree.html"> <img src="Images/instagram.jpg" alt="Instagram review">  </a> </p>
+<div id = "gamesSix">
+<p> <a href = "gamesSix.html"> <img src="Images/instagram.jpg" alt="Instagram review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 
