--- a/newsOne.html
+++ b/newsOne.html
@@ -15,4 +15,6 @@ layout: default
 
 <p>Quam convallis viverra tincidunt odio Turpis mauris dictum neque porttitor dolor. Turpis cubilia eget, fusce tortor. Platea <strong>ultricies</strong> condimentum luctus bibendum egestas cubilia torquent elementum vehicula cursus feugiat hac netus. Sem consectetuer scelerisque et, tincidunt maecenas tincidunt sodales dictum amet. Varius fames nullam pede posuere netus convallis congue. Tristique leo litora praesent tortor nostra varius. Auctor elit. Facilisis penatibus in. Dis rutrum nam netus lobortis lacus taciti conubia iaculis. Luctus sit dictumst cum. Consequat integer quisque tellus iaculis. Venenatis sem, sit. Et Venenatis euismod dolor <strong>vehicula</strong> eu nullam euismod quam. Vestibulum sapien facilisi commodo. Luctus sed varius eleifend rhoncus. Pharetra. Etiam porta fames primis habitant a eget erat mauris condimentum vulputate, aptent mattis facilisi lacus cras hendrerit, praesent ante. Morbi praesent sagittis tristique class aliquet dignissim semper, non nostra sit.</p>
 
-<button class="btn btn-danger" href="newsTwo.html">Next Page</button>
+<div id = "buttonOne">
+<a href="newsTwo.html" class= "btn btn-danger">Next Page</a>
+</div> 
