--- a/newsOne.html
+++ b/newsOne.html
@@ -6,7 +6,7 @@ layout: default
 <h1> MakerBot 3d Printing </h1>
 
 <p>Donec <em>netus</em> posuere, placerat. Metus. Diam etiam mi sociosqu praesent. Cras. Eu hac, ridiculus. Purus venenatis taciti molestie, nonummy class curae;. Ultricies torquent felis justo tempor litora. Massa commodo netus pede eget fames cubilia <strong>pretium</strong> ut. Natoque placerat tellus mattis per mus morbi hac purus facilisis quisque sociis netus egestas ad nec. Leo. Primis sagittis fringilla tristique sit. Rhoncus placerat nascetur. In conubia hac nonummy purus eros massa etiam nec arcu habitant eros et. Dignissim nunc mollis ipsum donec magna iaculis pharetra diam auctor ut. Facilisi commodo cubilia vestibulum a <strong>pretium</strong> amet elit hymenaeos Nullam ullamcorper montes magnis molestie nunc fringilla quisque iaculis ac. Class ante. Tellus eros duis vulputate. Eu, inceptos dignissim ut turpis pellentesque cras, donec sem curabitur nam gravida aliquet penatibus leo ipsum est penatibus interdum.</p>
-<div id = "botOne">
+<div id = "imgOne">
 <p> <a href = "newsOne.html"> <img src="Images/MakerBot.jpg" align = "right" alt="3D printer news">  </a> </p>
 </div>
 <p>Fringilla habitasse elit nascetur hymenaeos sodales aptent nam rutrum dignissim. Adipiscing faucibus commodo nisi magnis class in. Cum. Accumsan enim tempor sodales aliquam sem malesuada eu urna purus scelerisque nullam commodo curae;. Duis proin scelerisque. Suscipit arcu. Nostra nisi. Rhoncus fames suspendisse. Leo a netus proin cum nostra turpis, class augue inceptos nullam interdum sociis odio iaculis quisque cubilia gravida tristique quisque vivamus sed nostra euismod donec facilisi pellentesque consectetuer lacinia nam hac volutpat per sollicitudin lacus ridiculus platea ultrices erat, nonummy tellus hymenaeos cras non eleifend primis aliquam. Eleifend bibendum ridiculus interdum primis fames est velit velit fusce sodales duis justo erat vivamus ante nisl pulvinar enim elit nascetur hymenaeos orci dignissim libero odio fermentum velit mattis dui gravida Primis sapien elementum sed praesent integer senectus. <strong>Mattis</strong> <em>porta</em> tempor mus torquent. <strong>Ultricies</strong> ligula ipsum velit vestibulum magnis cubilia congue curabitur egestas metus Tellus consequat velit. Interdum orci sed pulvinar cubilia habitasse porttitor in condimentum habitant ultrices integer convallis fringilla vitae nec.</p>
@@ -17,4 +17,4 @@ layout: default
 
 <div id = "buttonOne">
 <a href="newsTwo.html" class= "btn btn-danger">Next Page</a>
-</div> 
+</div>
