--- a/newsThree.html
+++ b/newsThree.html
@@ -1,6 +1,20 @@
 ---
-title: App Reviews
+title: Tech News
 layout: default
 ---
 
-<h1> Galaxy s6 </h1>
+<h1> Galaxy S6 </h1>
+
+<p>Donec <em>netus</em> posuere, placerat. Metus. Diam etiam mi sociosqu praesent. Cras. Eu hac, ridiculus. Purus venenatis taciti molestie, nonummy class curae;. Ultricies torquent felis justo tempor litora. Massa commodo netus pede eget fames cubilia <strong>pretium</strong> ut. Tellus eros duis vulputate. Eu, inceptos dignissim ut turpis pellentesque cras, donec sem curabitur nam gravida aliquet penatibus leo ipsum est penatibus interdum.</p>
+<div id = "imgOne">
+<p> <a href = "newsThree.html"> <img src="Images/phone.jpg" align = "right" alt="Tablet news">  </a> </p>
+</div>
+<p>Fringilla habitasse elit nascetur hymenaeos sodales aptent nam rutrum dignissim. Adipiscing faucibus commodo nisi magnis class in. Cum. Accumsan enim tempor sodales aliquam sem malesuada eu urna purus scelerisque nullam commodo curae;. Duis proin scelerisque. Suscipit arcu. Nostra nisi.Eleifend bibendum ridiculus interdum primis fames est velit velit fusce sodales duis justo erat vivamus ante nisl pulvinar enim elit nascetur hymenaeos orci dignissim libero odio fermentum velit mattis dui gravida Primis sapien elementum sed praesent integer senectus. <strong>Mattis</strong> <em>porta</em> tempor mus torquent. <strong>Ultricies</strong> ligula ipsum velit vestibulum magnis cubilia congue curabitur egestas metus Tellus consequat velit. Interdum orci sed pulvinar cubilia habitasse porttitor in condimentum habitant ultrices integer convallis fringilla vitae nec.</p>
+
+<p>Montes porta class lobortis nam faucibus nam. Venenatis natoque. Praesent lacus consequat non porttitor congue varius. <em>Aliquam</em> tortor massa ultricies. <em>Fringilla</em> <em>purus</em> mauris libero porttitor phasellus. Cum pharetra. Montes nisi. Erat, luctus praesent donec pellentesque scelerisque ultrices aptent. Per est iaculis, aliquet. Semper. Aliquam diam volutpat euismod. Nullam accumsan ullamcorper tempus nisi cubilia penatibus Aliquam varius vivamus blandit sem varius condimentum in in potenti vel lectus curabitur. Enim nonummy feugiat convallis sem. Sociosqu hymenaeos sollicitudin magnis iaculis, accumsan hendrerit. Posuere sit aliquet suscipit malesuada molestie <strong>etiam</strong> eros lacus auctor malesuada ultricies duis egestas eros cubilia duis phasellus. Habitant dictum. Hendrerit vestibulum justo condimentum platea mus porttitor mattis vulputate sit penatibus tempus. Nulla. Posuere lobortis.</p>
+
+<p>Quam convallis viverra tincidunt odio Turpis mauris dictum neque porttitor dolor. Turpis cubilia eget, fusce tortor. Platea <strong>ultricies</strong> condimentum luctus bibendum egestas cubilia torquent elementum vehicula cursus feugiat hac netus. Sem consectetuer scelerisque et, tincidunt maecenas tincidunt sodales dictum amet. Varius fames nullam pede posuere netus convallis congue. Tristique leo litora praesent tortor nostra varius. Auctor elit. Facilisis penatibus in. Dis rutrum nam netus lobortis lacus taciti conubia iaculis. Luctus sit dictumst cum. Consequat integer quisque tellus iaculis. Venenatis sem, sit. Et Venenatis euismod dolor <strong>vehicula</strong> eu nullam euismod quam. Vestibulum sapien facilisi commodo. Luctus sed varius eleifend rhoncus. Pharetra. Etiam porta fames primis habitant a eget erat mauris condimentum vulputate, aptent mattis facilisi lacus cras hendrerit, praesent ante. Morbi praesent sagittis tristique class aliquet dignissim semper, non nostra sit.</p>
+
+<div id = "buttonOne">
+<a href="reviewOne.html" class= "btn btn-danger">Next Section</a>
+</div>
