--- a/newsTwo.html
+++ b/newsTwo.html
@@ -6,7 +6,7 @@ layout: default
 <h1> Android Tablet </h1>
 
 <p>Donec <em>netus</em> posuere, placerat. Metus. Diam etiam mi sociosqu praesent. Cras. Eu hac, ridiculus. Purus venenatis taciti molestie, nonummy class curae;. Ultricies torquent felis justo tempor litora. Massa commodo netus pede eget fames cubilia <strong>pretium</strong> ut. Tellus eros duis vulputate. Eu, inceptos dignissim ut turpis pellentesque cras, donec sem curabitur nam gravida aliquet penatibus leo ipsum est penatibus interdum.</p>
-<div id = "TabletOne">
+<div id = "imgOne">
 <p> <a href = "newsTwo.html"> <img src="Images/android.jpg" align = "right" alt="Tablet news">  </a> </p>
 </div>
 <p>Fringilla habitasse elit nascetur hymenaeos sodales aptent nam rutrum dignissim. Adipiscing faucibus commodo nisi magnis class in. Cum. Accumsan enim tempor sodales aliquam sem malesuada eu urna purus scelerisque nullam commodo curae;. Duis proin scelerisque. Suscipit arcu. Nostra nisi.Eleifend bibendum ridiculus interdum primis fames est velit velit fusce sodales duis justo erat vivamus ante nisl pulvinar enim elit nascetur hymenaeos orci dignissim libero odio fermentum velit mattis dui gravida Primis sapien elementum sed praesent integer senectus. <strong>Mattis</strong> <em>porta</em> tempor mus torquent. <strong>Ultricies</strong> ligula ipsum velit vestibulum magnis cubilia congue curabitur egestas metus Tellus consequat velit. Interdum orci sed pulvinar cubilia habitasse porttitor in condimentum habitant ultrices integer convallis fringilla vitae nec.</p>
@@ -16,5 +16,5 @@ layout: default
 <p>Quam convallis viverra tincidunt odio Turpis mauris dictum neque porttitor dolor. Turpis cubilia eget, fusce tortor. Platea <strong>ultricies</strong> condimentum luctus bibendum egestas cubilia torquent elementum vehicula cursus feugiat hac netus. Sem consectetuer scelerisque et, tincidunt maecenas tincidunt sodales dictum amet. Varius fames nullam pede posuere netus convallis congue. Tristique leo litora praesent tortor nostra varius. Auctor elit. Facilisis penatibus in. Dis rutrum nam netus lobortis lacus taciti conubia iaculis. Luctus sit dictumst cum. Consequat integer quisque tellus iaculis. Venenatis sem, sit. Et Venenatis euismod dolor <strong>vehicula</strong> eu nullam euismod quam. Vestibulum sapien facilisi commodo. Luctus sed varius eleifend rhoncus. Pharetra. Etiam porta fames primis habitant a eget erat mauris condimentum vulputate, aptent mattis facilisi lacus cras hendrerit, praesent ante. Morbi praesent sagittis tristique class aliquet dignissim semper, non nostra sit.</p>
 
 <div id = "buttonOne">
-<a href="newsTwo.html" class= "btn btn-danger">Next Page</a>
+<a href="newsThree.html" class= "btn btn-danger">Next Page</a>
 </div>
