--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@ layout: default
 
 <div class= "col-md-4">
 <div = "gamesOne">
-<p> <a href = "gamesOne.html"> <img src="Images/3dPrinter.jpg" alt="3D printer news">  </a> </p>
+<p> <a href = "gamesOne.html"> <img src="Images/angrybirds.jpg" alt="Angry Birds review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -17,14 +17,14 @@ layout: default
 
 <div class= "col-md-4">
 <div = "gamesTwo">
-<p> <a href = "gamesTwo.html"> <img src="Images/tablet.png" alt="Tablet News">  </a> </p>
+<p> <a href = "gamesTwo.html"> <img src=Images/"bloons.jpg" alt="Bloons review">  </a> </p>
 </div>
 <h3> Dummy Headline </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class= "col-md-4">
   <div = "gamesThree">
-<p> <a href = "gamesThree.html"> <img src="Images/galaxy s6.jpg" alt="Phone News">  </a> </p>
+<p> <a href = "gamesThree.html"> <img src="Images/flappybird.jpg" alt="Flappy Bird review">  </a> </p>
 </div>
 <h3> Dummy Headline </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -35,7 +35,7 @@ layout: default
 <div class= "col-md-4">
 <div id = "gamesFour">
 
-<p> <a href = "gamesFour.html"> <img src="Images/twitter.jpg" alt="Twitter review">  </a> </p>
+<p> <a href = "gamesFour.html"> <img src="Images/QuizUp.jpg" alt="Quiz Up review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -43,7 +43,7 @@ layout: default
 <div class= "col-md-4">
 <div id = "gamesFive">
 
-<p> <a href = "gamesFive.html"> <img src="Images/Snapchat.png" alt="Snapchat review">  </a> </p>
+<p> <a href = "gamesFive.html"> <img src="Images/sonic.jpg" alt="Sonic review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 
@@ -51,7 +51,7 @@ layout: default
 </div>
 <div class= "col-md-4">
 <div id = "gamesSix">
-<p> <a href = "gamesSix.html"> <img src="Images/instagram.jpg" alt="Instagram review">  </a> </p>
+<p> <a href = "gamesSix.html"> <img src="Images/Vainglory.jpg" alt="Vainglory review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
 
