--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@ layout: default
 <div class="row">
 
 <div class= "col-md-4">
-<div = "gamesOne">
+<div = id = "gamesOne">
 <p> <a href = "gamesOne.html"> <img src="Images/angrybirds.jpg" alt="Angry Birds review">  </a> </p>
 </div>
 <h3> Dummy Headline</h3>
@@ -16,14 +16,14 @@ layout: default
 </div>
 
 <div class= "col-md-4">
-<div = "gamesTwo">
+<div = id = "gamesTwo">
 <p> <a href = "gamesTwo.html"> <img src="Images/bloons.jpg" alt="Bloons review">  </a> </p>
 </div>
 <h3> Dummy Headline </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <div class= "col-md-4">
-  <div = "gamesThree">
+  <div = id = "gamesThree">
 <p> <a href = "gamesThree.html"> <img src="Images/flappybird.jpg" alt="Flappy Bird review">  </a> </p>
 </div>
 <h3> Dummy Headline </h3>
