--- a/About.html
+++ b/About.html
@@ -3,13 +3,17 @@ title: About Tech news and App Reviews
 layout: default
 ---
 
-<h1> About Us</h1> 
+<h1> About Us</h1>
 
 <p>Orci phasellus parturient eleifend nulla varius. Habitant pulvinar, torquent habitasse consequat rhoncus pede luctus. Mi tellus convallis diam sociosqu a tortor.</p>
 
 <p>Consequat primis sed augue odio. Turpis vivamus. Potenti augue feugiat magnis interdum risus vivamus dis.</p>
 
 <p>Netus purus pretium Nam quis vulputate nisi vehicula elit sodales massa. Senectus id laoreet. Lacus. Cursus dis orci blandit nisi. Leo dictumst pulvinar porta.</p>
+
+<h1>Contact Us</h1>
+
+<p>Eu ipsum. Porta, cras nibh maecenas sapien, sagittis purus senectus.</p>
 
 <div id = "buttonOne">
 <a href="index.html" class= "btn btn-danger">Home</a>
