changes to site

--- a/reviewOne.html
+++ b/reviewOne.html
@@ -6,7 +6,7 @@ layout: default
 <h1> Twitter Review </h1>
 <p>Donec <em>netus</em> posuere, placerat. Metus. Diam etiam mi sociosqu praesent. Cras. Eu hac, ridiculus. Purus venenatis taciti molestie, nonummy class curae;. Ultricies torquent felis justo tempor litora. Massa commodo netus pede eget fames cubilia <strong>pretium</strong> ut. Tellus eros duis vulputate. Eu, inceptos dignissim ut turpis pellentesque cras, donec sem curabitur nam gravida aliquet penatibus leo ipsum est penatibus interdum.</p>
 <div id = "imgOne">
-<p> <a href = "reviewOne.html"> <img src="Images/twitter.png" align = "right" alt="Twitter review">  </a> </p>
+<p> <a href = "reviewOne.html"> <img src="Images/twitterLogo.jpg" align = "right" alt="Twitter review">  </a> </p>
 </div>
 <p>Fringilla habitasse elit nascetur hymenaeos sodales aptent nam rutrum dignissim. Adipiscing faucibus commodo nisi magnis class in. Cum. Accumsan enim tempor sodales aliquam sem malesuada eu urna purus scelerisque nullam commodo curae;. Duis proin scelerisque. Suscipit arcu. Nostra nisi.Eleifend bibendum ridiculus interdum primis fames est velit velit fusce sodales duis justo erat vivamus ante nisl pulvinar enim elit nascetur hymenaeos orci dignissim libero odio fermentum velit mattis dui gravida Primis sapien elementum sed praesent integer senectus. <strong>Mattis</strong> <em>porta</em> tempor mus torquent. <strong>Ultricies</strong> ligula ipsum velit vestibulum magnis cubilia congue curabitur egestas metus Tellus consequat velit. Interdum orci sed pulvinar cubilia habitasse porttitor in condimentum habitant ultrices integer convallis fringilla vitae nec.</p>
 
